--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.3.1",
     "@vercel/analytics": "^1.4.1",
     "astro": "^4.16.13",
+    "astro-icon": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
